update project details

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <!-- mdb bootstrap -->
         <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-        <title>React App</title>
+        <title>E-Commerce-React-UI</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
